--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-
 html{
     font-size: 11px;
 }
 
-body {
-    color: white;
+body { 
+	background-color:transparent; 
+	margin: 0; 
+	padding: 0;
 }
 
 table {
@@ -46,6 +47,4 @@ img {
 
 button{
     text-align: center;
-	height: 100px;
-    width: 100px;
 }
