--- a/style.css
+++ b/style.css
@@ -44,11 +44,20 @@ button {
     box-shadow: 0px 6px 0px #2b638f, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
 }
 #footer{ /* Keterangan footer sama dengan header */
-	width:100td_persen;
-	height:50px;
-	border-bottom:silver 1px solid;
-	position:fixed;
-	bottom:0px;
-	background-color:#cccccc;
-	z-index:2;
+	height: 40px;
+	align: center;
+	position: fixed;
+	border-top: 1px solid #ddd;
+	border-bottom: 10px solid #f5f5f5;
+	background-color: #111;
+	width: 100%;
+	left: 0px;
+	text-align: center;
+	color: #fff;
+	font-family: Verdana;
+	font-size: 11px;
+	z-index:10000;
+	opacity: 0.9;
+	filter: alpha(opacity: 90);
+	bottom:0;
 }
