--- a/style.css
+++ b/style.css
@@ -8,9 +8,20 @@ body {
 	padding: 0;
 }
 
-#imag { 
+.imag { 
     max-width: 25%; 
     height: auto; 
+}
+
+.responsive {
+    max-width: 100%;
+    height: auto;
+}
+
+.layang {
+	position:fixed;
+	left:5px;
+	top:60px;
 }
 
 button {
@@ -39,10 +50,4 @@ button {
     -moz-border-radius: 5px;
     border-radius: 5px;
     text-shadow: 0px -1px 0px rgba(0,0,0,.5);
-}
-#footer{ /* Keterangan footer sama dengan header */
-	position: fixed;
-	opacity: 0.9;
-	filter: alpha(opacity: 50);
-	bottom:0;
 }
