--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ body {
         opacity: 0;
         visibility: hidden;
         transform: scale(1.1);
-        transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+        transition: visibility 3s linear 2s, opacity 2s 0s, transform 2s;
 }
 .modal-content {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: white;
+        background-color: transparent;
         padding: 1rem 1.5rem;
         width: 24rem;
         border-radius: 0.5rem;
@@ -62,5 +62,5 @@ body {
         opacity: 1;
         visibility: visible;
         transform: scale(1.0);
-        transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+        transition: visibility 3s linear 3s, opacity 2s 1s, transform 2s;
 }
