--- a/style.css
+++ b/style.css
@@ -41,7 +41,9 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: transparent;
+        background-color: #ffffff;
+	opaciti: 0.6:
+	filter: alpha(opacity=50);
         padding: 1rem 1.5rem;
         width: 24rem;
         border-radius: 0.5rem;
