--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: #ffffff;
-	opaciti: 0.6:
+	opacity: 0.6;
 	filter: alpha(opacity=50);
         padding: 1rem 1.5rem;
         width: 24rem;
@@ -61,8 +61,9 @@ body {
         background-color: darkgray;
 }
 .show-modal {
-        opacity: 1;
+        opacity: 0.6;
+	filter: alpha(opacity=50);
         visibility: visible;
-        transform: scale(1.0);
-        transition: visibility 3s linear 3s, opacity 2s 1s, transform 2s;
+        transform: scale(1.1);
+        transition: visibility 1s linear 3s, opacity 2s 1s, transform 2s;
 }
