--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: #ffffff;
+        background-color: #ff00ff;
 	opacity: 0.6;
-	filter: alpha(opacity=50);
+	filter: alpha(opacity=60);
         padding: 1rem 1.5rem;
         width: 24rem;
         border-radius: 0.5rem;
@@ -62,8 +62,14 @@ body {
 }
 .show-modal {
         opacity: 0.6;
-	filter: alpha(opacity=50);
+	filter: alpha(opacity=60);
         visibility: visible;
+	position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
         transform: scale(1.1);
-        transition: visibility 1s linear 3s, opacity 2s 1s, transform 2s;
+        transition: visibility 3s linear 2s, opacity 2s 0s, transform 2s;        
 }
