--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: #ff00ff;
-	opacity: 0.6;
+        background-color: #ccffcc;
+	opacity: 0;
 	filter: alpha(opacity=60);
         padding: 1rem 1.5rem;
         width: 24rem;
@@ -61,8 +61,8 @@ body {
         background-color: darkgray;
 }
 .show-modal {
-        opacity: 0.6;
-	filter: alpha(opacity=60);
+        opacity: 1;
+	filter: alpha(opacity=20);
         visibility: visible;
 	position: fixed;
         left: 0;
