--- a/style.css
+++ b/style.css
@@ -34,20 +34,18 @@ body {
         opacity: 0;
         visibility: hidden;
         transform: scale(1.1);
-        transition: visibility 3s linear 2s, opacity 2s 0s, transform 2s;
-}
+        transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+    }
 .modal-content {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: #ccffcc;
-	opacity: 0.6;
-	filter: alpha(opacity=60);
+        background-color: #cfcfcf;
         padding: 1rem 1.5rem;
         width: 24rem;
         border-radius: 0.5rem;
-}
+    }
 .close-button {
         float: right;
         width: 1.5rem;
@@ -56,12 +54,13 @@ body {
         cursor: pointer;
         border-radius: 0.25rem;
         background-color: lightgray;
-}
+    }
 .close-button:hover {
         background-color: darkgray;
-}
+    }
 .show-modal {
+        opacity: 1;
         visibility: visible;
-	transform: scale(1.1);
-        transition: visibility 1s linear 1s, opacity 1s 0s, transform 1s;        
-}
+        transform: scale(1.0);
+        transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+    }
